2009-02-23  Scott Peterson  <lunchtimemama@gmail.com>

	* Mono.Upnp.Dcp.MediaServer1.Client.csproj:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Item.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Class.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Object.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Results.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Schemas.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Resource.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/Movie.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/Album.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/Genre.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/Photo.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Container.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/Person.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/Resolution.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/BrowseFlag.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/ItemBuilder.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/TextItem.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/WriteStatus.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/ImageItem.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/AudioItem.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/AudioBook.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/VideoItem.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/ClassManager.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/MusicGenre.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/MovieGenre.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/SearchResults.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/ObjectBuilder.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/BrowseResults.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/MusicAlbum.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/PhotoAlbum.cs:
	* Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.Av/MusicTrack.cs: