@@ -1,3 +1,7 @@
+2009-02-23  Scott Peterson  <lunchtimemama@gmail.com>
+
+	* Mono.Upnp.ConsoleClient/ConsoleClient.cs: 
+
 2009-02-22  Scott Peterson  <lunchtimemama@gmail.com>
 
 	* Mono.Upnp.ConsoleClient/ConsoleClient.cs: 
